--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@ Meu objetivo é continuar desenvolvendo minhas habilidades em linguística e com
 Sou uma pessoa com ótima capacidade de análise e foco em resultados.
                 </p>
                 <div class="social-icons">
+                    <a href="https://wa.me/555192797878">
+                        <img alt="Chat on WhatsApp" src="assets/img/whatsapp.png" />
+                    </a>
                     <a class="social-icon" href="https://www.linkedin.com/in/cristiane-kneip-leite-8078bb70/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/teachercristiane"><i class="fab fa-github"></i></a>
+                 
                 </div>
             </div>
         </section>
