fixing services text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Sou uma pessoa com ótima capacidade de análise e foco em resultados.
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5">Services</h2>
+                <h2 class="mb-5">Serviços</h2>
                 <p>
                     Aulas de língua Inglesa individuais e em grupo. Dublagem e tradução.
                 </p>
